Version History
===============

v0.1.1
------

 * Updated :class:`~oyProjectManager.models.project.Sequence` documentation

 * In defaultProjectSettings it is now possible to use Jinja2 templates.

 * nukeEnv now sets the root.project_directory path variable to the sequence
   path and replaces all the file paths relative to project_directory path.

v0.1.0
------

 * Updated houdiniEnv to filter out wedge nodes from the render nodes list,
   which was causing errors while setting the frame range limits.

 * houdiniEnv now replaces the render output path with relative to the $HIP
   environment variable.

 * nukeEnv now creates the full path of the current asset before saving it.

 * Added "EDIT" assetType to Nuke environment.

 * in :class:`~oyProjectManager.models.repository.Repository`
   some methods listed below has been renamed:
   
    * getProjectAndSequenceNameFromFilePath ->
      get_project_and_sequence_name_from_file_path
   
    * lastUser -> last_user
   
    * settingsDirPath -> settings_dir_path

 * changed the version numbering scheme back again to a normal version, relase
   scheme.

 * fixed houdiniEnv for negative frame ranges, previously it was giving wrong
   frame range info.

 * added a leading "/" to the texture path in mentalray texture files when
   replacing the external paths with the repository path environment
   variable.

 * removed the
   :meth:`~oyProjectManager.models.repository.Repository.get_settings_path`.

 * removed the
   :meth:`~oyProjectManager.models.repository.Repository.projectsFullPath`,
   use
   :meth:`~oyProjectManager.models.repository.Repository.server_path`
   instead.

 * Changed the :class:`~oyProjectManager.models.repository.Repository`
   inheritance, it is now an instance of the regular Python Object class
   instead of the :class:`~oyProjectManager.models.abstractClasses.Singleton`

 * :meth:`~oyProjectManager.models.repository.Repository._readUsers` renamed