@@ -29,8 +29,7 @@
                 EDIT/ONLINE/WHOLE_SEQUENCE
                 EDIT/PLAYBLASTS/OTHER_PLAYBLASTS
                 EDIT/SOUND
-                EDIT/STORYBOARD
-                EDIT/STORYBOARD/ANIMATIC_STORYBOARD
+                EDIT/ANIMATIC_STORYBOARD
                 OTHERS
                 OTHERS/assets
                 OTHERS/clips
@@ -48,6 +47,8 @@
                 REFERENCES/ARTWORKS
                 REFERENCES/TEXT
                 REFERENCES/TEXT/SCENARIO
+                REFERENCES/PHOTOS
+                REFERENCES/STORYBOARD
             </shotIndependent>
         </structure>
         <assetTypes>
