@@ -10,15 +10,15 @@ from PyQt4 import QtGui
 
 
 ########################################################################
-class QApplication( QtGui.QApplication ):
+class QApplication(QtGui.QApplication):
     """a singleton QApplication class
     """
     
     #----------------------------------------------------------------------
     def __new__(cls, *args):
-        if cls.instance() == None:
+        if cls.instance() is None:
             # create a QApplication
-            QtGui.QApplication(*args)
+            return QtGui.QApplication(*args)
         
         # return the instance
         return cls.instance()
